Add: app icon 'markdown mark'

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </head>
   <body>
     <titlebar>
-      <div class="titlebar-name">nwjs-m-p</div>
+      <i class="fa markdown-mark"></i>
       <i class="fa fa-pull-right fa-times" onclick="app.close();"></i>
       <div class="divider-vertical"></div>
       <i class="fa fa-pull-right fa-refresh" onclick="app.render();" data-refresh></i>
