Move: *.css -> styles/

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>nwjs/m/p</title>
-    <link rel="stylesheet" type="text/css" href="./animations.css" />
-    <link rel="stylesheet" type="text/css" href="./ui.css" />
-    <link rel="stylesheet" type="text/css" href="./git-flavored.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/animations.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/ui.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/git-flavored.css" />
     <link rel="stylesheet" type="text/css" href="./lib/font-awesome/css/font-awesome.min.css" />
     <script>
       let parseArgv = (args) => {
