--- a/static-page/index.html
+++ b/static-page/index.html
@@ -19,10 +19,12 @@
 <body>
   <div class="container">
     <div class="row">
-      <img class="img" src="./img/markdown-preview-mark.svg" />
+      <div class="col-lg-12 logo">
+        <img class="img" src="./img/markdown-preview-mark.svg" />
+      </div>
     </div>
     <div class="row">
-      <div class="col-lg offset-lg-4">
+      <div class="col-lg-10 offset-lg-1">
         <div class="mdp-window">
           <titlebar>
             <i class="fa markdown-mark"></i>
