Fix: textarea sizing

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <content>
       </content>
       <rawmodal>
-        <textarea id="compiled_raw" resizable="false"></textarea>
+        <textarea id="compiled_raw" readonly></textarea>
       </rawmodal>
     </container>
   </body>
