Add: sub title to static-page

--- a/static-page/index.html
+++ b/static-page/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="./styles/ui.css">
   <link rel="stylesheet" type="text/css" href="./lib/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
@@ -24,6 +25,11 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-lg-12 text-lg-center">
+        <span class="sub-title">What you see is what you get. Period.</span>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-lg-10 offset-lg-1">
         <div class="mdp-window">
           <titlebar>
@@ -32,6 +38,7 @@
             <div class="divider-vertical"></div>
             <i class="fa fa-pull-right fa-chain-broken" onclick="app.toggleFilewatcher();" data-filewatcher></i>
             <div class="divider-vertical"></div>
+            <i class="fa fa-pull-right fa-hashtag" data-refresh></i>
             <i class="fa fa-pull-right fa-refresh" onclick="app.render();" data-refresh></i>
           </titlebar>
           <container>
