Refactor: moving some files around, _init out of index.html

--- a/index.html
+++ b/index.html
@@ -6,83 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./styles/ui.css" />
     <link rel="stylesheet" type="text/css" href="./styles/git-flavored.css" />
     <link rel="stylesheet" type="text/css" href="./lib/font-awesome/css/font-awesome.min.css" />
-    <script>
-      let parseArgv = (args) => {
-        let options = {
-          i: '',        // no standard input file; -i ''
-          w: true,      // auto attach file-watcher; -w true
-        };
-        for (let key in options) {
-          let flagIdx = args.indexOf('-' + key);
-          if (flagIdx > -1) {
-            options[key] = args[flagIdx + 1];
-          }
-        }
-        return options;
-      };
-
-      let _init = () => {
-        const gui = require('nw.gui');
-        const options = parseArgv(gui.App.argv);
-        const inputPath = options.i;
-
-        if (!inputPath) {
-          alert(`Can't read from ${inputPath}.`);
-          inputPath = './README.md';
-        };
-
-        const app = {
-          UI: require('./ui.js'),
-          RenderRequest: require('./render-request.js')
-        };
-
-        const request = new app.RenderRequest(inputPath, 'raw');
-
-        app.render = () => {
-          app.UI.toggleRequestAnimation(true);
-          request.compile().then((req) => {
-            app.UI.setContent(req.compiledHTMLDocument);
-            app.UI.flashContent();
-          })
-          .catch((err) => {
-            console.log(err);
-          })
-          .finally(app.UI.toggleRequestAnimation);
-        };
-
-        app.toggleFilewatcher = () => {
-          let state = request.fileWatcher ? false : true;
-          if (state) {
-            request.startFileWatcher((type, fileName) => {
-              if (type === 'change') {
-                request.updateInput()
-                .then(app.render)
-                .catch((err) => {});
-              }
-            });
-          } else {
-            request.stopFileWatcher();
-          }
-          app.UI.toggleFilewatcher(state);
-        };
-
-        app.showRawModal = () => {
-          app.UI.showRawModal(request.compiled);
-        };
-
-        app.close = () => gui.App.quit();
-
-        window.app = app;
-        window.clipboard = gui.Clipboard.get();
-
-        app.UI.init(window);
-        app.render();
-        if (options.w) {
-          app.toggleFilewatcher();
-        }
-      };
-      document.addEventListener('DOMContentLoaded', _init);
-    </script>
+    <script src="./app.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <titlebar>
