--- a/static-page/index.html
+++ b/static-page/index.html
@@ -16,6 +16,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+  <script src="./mdp.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -41,7 +42,7 @@
         <div class="mdp-window">
           <titlebar>
             <i class="fa fa-pull-left markdown-mark"></i>
-            <div class="fa-pull-left filename">./README.md</div>
+            <div class="fa-pull-left filename">/opt/nwjs-mdp/README.md</div>
             <i class="fa fa-pull-right fa-times" onclick="app.close();"></i>
             <div class="divider-vertical"></div>
             <i class="fa fa-pull-right fa-chain-broken" onclick="app.toggleFilewatcher();" data-filewatcher></i>
