--- a/static-page/index.html
+++ b/static-page/index.html
@@ -9,9 +9,12 @@
 
   <link rel="stylesheet" type="text/css" href="./styles/git-flavored.css">
   <link rel="stylesheet" type="text/css" href="./styles/ui.css">
+  <link rel="stylesheet" type="text/css" href="./styles/gh-fork-ribbon.css">
+
   <link rel="stylesheet" type="text/css" href="./lib/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
@@ -21,13 +24,19 @@
 </head>
 <body>
   <!-- "Fork me on Github" -->
-  <a href="https://github.com/rbeer/nwjs-markdown-preview"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+  <a class="github-fork-ribbon right-top" href="https://github.com/rbeer/nwjs-mdp" title="Fork me on GitHub">Fork me on GitHub</a>
   <!-- -->
   <div class="container">
     <!-- logo -->
     <div class="row">
       <div class="col-lg-12 logo">
         <img class="img" src="./img/markdown-preview-mark.svg" />
+        <div class="c-slack">
+          <div class="c-slack__dot c-slack__dot--a"></div>
+          <div class="c-slack__dot c-slack__dot--b"></div>
+          <div class="c-slack__dot c-slack__dot--c"></div>
+          <div class="c-slack__dot c-slack__dot--d"></div>
+        </div>
       </div>
     </div>
     <!-- sub title -->
