Fix: link to github opens in same tab

--- a/static-page/index.html
+++ b/static-page/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <!-- "Fork me on Github" -->
-  <a class="github-fork-ribbon right-top" href="https://github.com/rbeer/nwjs-mdp" title="Fork me on GitHub">Fork me on GitHub</a>
+  <a class="github-fork-ribbon right-top" href="https://github.com/rbeer/nwjs-mdp" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
   <!-- -->
   <div class="container">
     <!-- logo -->
